cmake_minimum_required(VERSION 3.20)
project(binary_tree_in_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(binary_tree_in_C___0 full-binary-tree.cpp)
add_executable(binary_tree_in_C___1 perfect-binary-tree.cpp)
add_executable(binary_tree_in_C___2 complete-binary-tree.cpp)
add_executable(balanced balanced-binary-tree.cpp)